Fixed the navbar when it collapses.

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,8 +39,10 @@ a:hover {
     cursor: hand;
 }
 
-#logoutBtn {
-    margin-left: 20px;
+
+
+#logoutBtnSmall, #logoutBtnLarge {
+    padding-left: 15px;
 }
 
 #stage {
@@ -102,13 +104,42 @@ a:hover {
     border-radius:0;
 }
 
+#navbarSmall h1 {
+    margin-bottom:20px;
+}
+
+#logoutBtnSmall {
+    margin-top: 10px;
+}
+
+#navbarSmall p {
+    margin:30px 0;
+}
+
+#navbarLarge div {
+    height:60px;
+}
+
+#navbarLarge div ul {
+    margin-top:-5px;
+}
+
+.white-nav {
+    color:#f5f5f5;
+}
+
+.white-nav:hover {
+    color:#acacac;
+}
+
+
 header {
     margin-top:-60px;
     height:60px;
     margin-bottom: 0;
 }
 
-#yourProfile {
+.yourProfile {
     margin-right:20px;
 }
 
@@ -185,6 +216,13 @@ footer {
 
 .buildInstructions a:hover {
     color: rgba(0,0,0,0.6) !important;
+}
+
+
+/* INSPIRATION PAGE */
+
+#inspirationHeader {
+    margin: 35px 0;
 }
 
 /* PROFILE PAGE */
@@ -268,6 +306,10 @@ footer {
     .profileProgressBar {
         width: 70%;
     }
+    
+    #navbarLarge {
+        background-color:#f7f7f9 !important;
+    }
 }
 
 @media (max-width: 62em) {
@@ -278,4 +320,5 @@ footer {
     #personalInfo {
         margin-top:30px;
     }
+    
 }
